[project]
name = "aaron-biotoolkit"
version = "0.1.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gemmi (>=0.7.0,<0.8.0)",
    "click (>=8.1.0,<9.0.0)"
]

[tool.poetry]
packages = [{include = "aaron_biotoolkit", from = "src"}]

[tool.poetry.scripts]
afs2pdb = 'aaron_biotoolkit.afs2pdb:main'

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
